Fix test for gradle